--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -7,7 +7,7 @@
           <ul class="list-unstyled">
             {{ range $.Site.Data.nav.new}}
             <li class="list-unstyled">
-              <a href="{{.navUrl}}" target="_blank" class="text-small text-graphite">{{.navTitle}}</a>
+              <a href="{{.navUrl}}" rel="noopener" rel="noreferrer" target="_blank" class="text-small text-graphite">{{.navTitle}}</a>
             </li>
             {{end}}
           </ul>
@@ -56,7 +56,7 @@
           <ul class="list-unstyled">
             {{range $.Site.Data.nav.developer}}
             <li class="list-unstyled">
-              <a href="{{.navUrl}}" target="_blank" class="text-small text-graphite">{{.navTitle}}</a>
+              <a href="{{.navUrl}}" rel="noopener" rel="noreferrer" target="_blank" class="text-small text-graphite">{{.navTitle}}</a>
             </li>
             {{end}}
           </ul>
@@ -72,7 +72,7 @@
             </li>
             {{end}}
             <li class="list-unstyled">
-              <a href="https://globalconnect.diesmo5.com/" target="_blank" class="text-small text-graphite">Global Connect Initiative</a>
+              <a href="https://globalconnect.diesmo5.com/" rel="noopener" rel="noreferrer" target="_blank" class="text-small text-graphite">Global Connect Initiative</a>
             </li>
           </ul>
         </div>
