--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -93,7 +93,7 @@
             class="dropdown-menu border-0"
             aria-labelledby="navbarDropdownMenuLink"
           >
-            <a class="dropdown-item" target="_blank" href="https://sudocore.diesmo5.com"
+            <a class="dropdown-item" rel="noopener" rel="noreferrer" target="_blank" href="https://sudocore.diesmo5.com"
               >Sudocore</a
             >
           </div>
@@ -120,7 +120,7 @@
               >Speaking Engagements</a
             >
             <a class="dropdown-item" href="/workshops">Workshops</a>
-            <a class="dropdown-item" target="_blank" href="https://globalconnect.diesmo5.com/"
+            <a class="dropdown-item" rel="noopener" rel="noreferrer" target="_blank" href="https://globalconnect.diesmo5.com/"
               >Global Connect Initiative</a
             >
           </div>
