--- a/layouts/c-programming/single.html
+++ b/layouts/c-programming/single.html
@@ -44,7 +44,7 @@
           {{ range $.Site.Data.courses.cprogramming.flowcontrol }}
           <a
             href="/c-programming/{{.navUrl}}"
-            class="btn btn-block btn-secondary text-left"
+            class="btn btn-block btn-grey text-left"
             >{{.navTitle}}</a
           >
           {{ end }}
@@ -54,7 +54,7 @@
           {{ range $.Site.Data.courses.cprogramming.functions }}
           <a
             href="/c-programming/{{.navUrl}}"
-            class="btn btn-block btn-secondary text-left"
+            class="btn btn-block btn-grey text-left"
             >{{.navTitle}}</a
           >
           {{ end }}
@@ -64,7 +64,7 @@
           {{ range $.Site.Data.courses.cprogramming.arrays }}
           <a
             href="/c-programming/{{.navUrl}}"
-            class="btn btn-block btn-secondary text-left"
+            class="btn btn-block btn-grey text-left"
             >{{.navTitle}}</a
           >
           {{ end }}
@@ -74,7 +74,7 @@
           {{ range $.Site.Data.courses.cprogramming.pointers }}
           <a
             href="/c-programming/{{.navUrl}}"
-            class="btn btn-block btn-secondary text-left"
+            class="btn btn-block btn-grey text-left"
             >{{.navTitle}}</a
           >
           {{ end }}
@@ -84,7 +84,7 @@
           {{ range $.Site.Data.courses.cprogramming.structs }}
           <a
             href="/c-programming/{{.navUrl}}"
-            class="btn btn-block btn-secondary text-left"
+            class="btn btn-block btn-grey text-left"
             >{{.navTitle}}</a
           >
           {{ end }}
@@ -94,7 +94,7 @@
           {{ range $.Site.Data.courses.cprogramming.resources }}
           <a
             href="/c-programming/{{.navUrl}}"
-            class="btn btn-block btn-secondary text-left"
+            class="btn btn-block btn-grey text-left"
             >{{.navTitle}}</a
           >
           {{ end }}
