Fixing about + Updating Nav

--- a/layouts/about/section.html
+++ b/layouts/about/section.html
@@ -21,4 +21,41 @@
   </div>
 </section>
 
+<secction id="programs" class=" py-5">
+  <div class="container py-5">
+    <h1 class="font-weight-bold py-5">Our Programs</h1>
+    <div class="row">
+      {{ range $.Site.Data.programs }}
+      <div class="col-lg-4 col-md-6 col-12 text-center">
+        <a
+          href="{{.programURL}}"
+          target="_blank"
+          rel="noopener"
+          rel="noreferrer"
+          class="text-graphite"
+        >
+          <img src="{{.programImg}}" alt="" class="w-50" />
+          <h2 class="font-weight-bold pt-4">{{.programTitle}}</h2>
+          <h6 class="">{{.programTagline}}</h6>
+        </a>
+      </div>
+      {{ end }}
+    </div>
+  </div>
+</secction>
+
+<section class="pt-5">
+  <div class="container-fluid text-center pb-5">
+    <div class="container py-5">
+      <hr>
+      <h4 class="font-weight-light pt-5">Interested in working with us?</h4>
+      <a
+        href="/contact/"
+        class="btn btn-lg btn-rose rounded-0 font-weight-light px-4 py-3"
+        >Join Our Mission</a
+      >
+    </div>
+  </div>
+</section>
+
 {{ end }}
