--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,5 +1,5 @@
 <section class="py-3">
-  <nav class="navbar navbar-expand-lg navbar-light">
+  <nav class="navbar navbar-expand-lg navbar-light container">
     <a class="navbar-brand" href="/">
       <img src="/img/logo/svg.svg" width="60px" alt="diesmo5-logo" />
     </a>
@@ -14,7 +14,7 @@
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <!-- <a class="nav-item nav-link" href="/">Home</a> -->
         <li class="nav-item dropdown">
@@ -33,12 +33,12 @@
             class="dropdown-menu border-0"
             aria-labelledby="navbarDropdownMenuLink"
           >
-            <a class="dropdown-item" href="/products">Marketing Materials</a>
+            <!-- <a class="dropdown-item" href="/products">Marketing Materials</a> -->
             <a class="dropdown-item" href="/services">Client Services</a>
             <a class="dropdown-item" href="/case-studies">Case Studies</a>
           </div>
         </li>
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
             href="/courses"
@@ -97,7 +97,7 @@
               >Sudocore</a
             >
           </div>
-        </li>
+        </li> -->
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
