vero motti added

--- a/layouts/case-studies/single.html
+++ b/layouts/case-studies/single.html
@@ -8,7 +8,7 @@
   <h1 class="text-dark font-weight-bold text-center pt-5 pb-2">
     {{.Title}}
   </h1>
-  <h3 class="text-secondary text-uppercase text-center pb-5">
+  <h3 class="text-graphite text-uppercase text-center pb-5">
     {{.Description}}
   </h3>
 </section>
@@ -23,26 +23,26 @@
       <div class="row py-5">
         <div class="col-lg-6 col-md-6 col-12 py-4">
           <h5 class="">CHALLENGE</h5>
-          <h5 class="font-weight-light text-secondary">
+          <h5 class="font-weight-light text-graphite">
             {{.Params.challenge}}
           </h5>
         </div>
         <div class="col-lg-6 col-md-6 col-12 py-4">
           <h5 class="">OUTCOME</h5>
-          <h5 class="font-weight-light text-secondary">{{.Params.outcome}}</h5>
+          <h5 class="font-weight-light text-graphite">{{.Params.outcome}}</h5>
         </div>
       </div>
     </div>
     <div class="col-lg-3 col-md-3 col-12 py-5 text-uppercase">
       <h6 class="text-dark">SCOPE OF PROJECT</h6>
-      <h6 class="font-weight-light text-secondary">
+      <h6 class="font-weight-light text-graphite">
         <a href="/tags/" class=""></a>
         {{.Params.tags}}</h6>
       <hr class="hidden-sm-down" />
       <h6 class="text-dark pt-4">LEAD</h6>
-      <h6 class="font-weight-light text-secondary">{{.Params.director}}</h6>
+      <h6 class="font-weight-light text-graphite">{{.Params.director}}</h6>
       <a href="#credits" class="text-decoration-none">
-        <h6 class="text-indigo pt-4">
+        <h6 class="text-graphite pt-4">
           FULL CREDITS
         </h6>
       </a>
@@ -117,33 +117,33 @@
   <div class="row center text-uppercase">
     <div class="col-lg-4 col-md-6 col-12">
       <h6 class="text-dark">CLIENT</h6>
-      <h6 class="font-weight-light text-secondary">{{.Params.client}}</h6>
+      <h6 class="font-weight-light text-graphite">{{.Params.client}}</h6>
       <h6 class="text-dark pt-4">CLIENT CEO</h6>
-      <h6 class="font-weight-light text-secondary">{{.Params.clientCEO}}</h6>
+      <h6 class="font-weight-light text-graphite">{{.Params.clientCEO}}</h6>
       <h6 class="text-dark pt-4">PRODUCTION COMPANY</h6>
-      <h6 class="font-weight-light text-secondary">DIESMO 5</h6>
+      <h6 class="font-weight-light text-graphite">DIESMO 5</h6>
     </div>
     <div class="col-lg-4 col-md-6 col-12">
       <h6 class="text-dark">DIRECTOR</h6>
-      <h6 class="font-weight-light text-secondary">{{.Params.director}}</h6>
+      <h6 class="font-weight-light text-graphite">{{.Params.director}}</h6>
       <h6 class="text-dark pt-4">DEVELOPER</h6>
-      <h6 class="font-weight-light text-secondary">{{.Params.developer}}</h6>
+      <h6 class="font-weight-light text-graphite">{{.Params.developer}}</h6>
       <h6 class="text-dark pt-4">DESIGNER</h6>
-      <h6 class="font-weight-light text-secondary">{{.Params.designer}}</h6>
+      <h6 class="font-weight-light text-graphite">{{.Params.designer}}</h6>
       <h6 class="text-dark pt-4">PROJECT MANAGER</h6>
-      <h6 class="font-weight-light text-secondary">
+      <h6 class="font-weight-light text-graphite">
         {{.Params.projectManager}}
       </h6>
     </div>
     <div class="col-lg-4 col-md-6 col-12">
       <h6 class="text-dark">SOFTWARE</h6>
-      <h6 class="font-weight-light text-secondary">{{.Params.software}}</h6>
+      <h6 class="font-weight-light text-graphite">{{.Params.software}}</h6>
       <h6 class="text-dark pt-4">LINKS</h6>
       <h6 class="font-weight-light">
         <a
           href="{{.Params.link}}"
           target="_blank"
-          class="text-decoration-none text-secondary"
+          class="text-decoration-none text-graphite"
           >{{.Params.linkTitle}}</a
         >
       </h6>
