--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -27,7 +27,7 @@
             aria-haspopup="true"
             aria-expanded="false"
           >
-            Store
+            For Business
           </a>
           <div
             class="dropdown-menu border-0"
@@ -38,7 +38,7 @@
             <a class="dropdown-item" href="/case-studies">Case Studies</a>
           </div>
         </li>
-        <!-- <li class="nav-item dropdown">
+        <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
             href="/courses"
@@ -48,7 +48,7 @@
             aria-haspopup="true"
             aria-expanded="false"
           >
-            Courses
+            For Education
           </a>
           <div
             class="dropdown-menu border-0"
@@ -87,7 +87,7 @@
             aria-haspopup="true"
             aria-expanded="false"
           >
-            Software
+            For Developers
           </a>
           <div
             class="dropdown-menu border-0"
@@ -97,7 +97,7 @@
               >Sudocore</a
             >
           </div>
-        </li> -->
+        </li>
         <li class="nav-item dropdown">
           <a
             class="nav-link dropdown-toggle"
@@ -108,7 +108,7 @@
             aria-haspopup="true"
             aria-expanded="false"
           >
-            Foundation
+            For Community
           </a>
           <div
             class="dropdown-menu border-0"
@@ -135,7 +135,7 @@
             aria-haspopup="true"
             aria-expanded="false"
           >
-            Media
+            Our Media
           </a>
           <div
             class="dropdown-menu border-0"
@@ -159,7 +159,7 @@
             aria-haspopup="true"
             aria-expanded="false"
           >
-            Company
+            Our Company
           </a>
           <div
             class="dropdown-menu border-0"
