--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -1,5 +1,5 @@
 <section class="py-3">
-  <nav class="navbar navbar-expand-lg navbar-light container">
+  <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand" href="/">
       <img src="/img/logo/svg.svg" width="60px" alt="diesmo5-logo" />
     </a>
