--- a/layouts/live/section.html
+++ b/layouts/live/section.html
@@ -28,7 +28,7 @@
     </h5>
     <h2 class="py-5">Additional Resources:</h2>
     <a href="https://code.visualstudio.com/" target="_blank" class="btn btn-block btn-grey text-left p-3">Visual Studio</a>
-    <a href="https://git-scm.com/downloads" target="_blank" class="btn btn-block btn-grey text-left p-3">Visual Studio</a>
+    <a href="https://git-scm.com/downloads" target="_blank" class="btn btn-block btn-grey text-left p-3">Git Bash</a>
     <a href="https://glitch.com/" target="_blank" class="btn btn-block btn-grey text-left p-3">Glitch.com</a>
     <a href="https://sudocore.dev/" target="_blank" class="btn btn-block btn-grey text-left p-3">Sudocore</a>
     <a href="https://github.com/" target="_blank" class="btn btn-block btn-grey text-left p-3">Github</a>
